Make it possible to inject context to beans